# Stardust

./: .gitignore  .gitmodules  CMakeLists.txt  compile_reflection.py  compile_shaders.py  cshaders.py  readme.md
Old/: Application.cpp  Application.hpp
Old/RTAO/: RTAO.hpp
Old/SSAO/: SSAO.hpp
Old/Scenes/: Camera.cpp  Camera.hpp  Raytracing.cpp  Scene.cpp  Scene.hpp
Old/Struct/: WindowSettings.hpp
Old/Utility/: Clock.hpp  Math.hpp
Old/rt/: RtAccelerator.cpp
Old/vk/: Geometry.hpp  Image.cpp  InstancedGeometry.hpp  Material.hpp  Sampler.cpp  Texture.hpp  VertexData.hpp
Old/vk/Commands/: CommandBuffers.hpp
Old/vk/Descriptors/: DescriptorSetLayout.hpp  DescriptorSets.cpp  DescriptorSets.hpp  DescriptorWrites.cpp
Old/vk/Device/: Device.cpp  Device.hpp  Surface.hpp
Old/vk/Pipelines/: PipelineBuilder.cpp  PipelineBuilder.hpp  PipelineState.cpp
Old/vk/Presentation/: Swapchain.hpp
Old/vk/Renderpass/: RenderPassBuilder.hpp
Resources/: OptimizationResultExample2.txt  objects.json  optimizer_result_example.txt  stardust.json
Resources/Raytracing/: reflection.rgen
Resources/Shaders/: ao.comp  aoo.comp  base.frag  base.vert  basic.frag  basic.vert  bloom.frag  common.glsl  compile_shaders.py  composite.frag  default.frag  default.vert  dummy.comp  osrshlss.frag  phong.frag  phong.vert  post.frag  raycommon.glsl  raytrace.rchit  raytrace.rgen  raytrace.rmiss  rg_deferred_pass.frag  rg_deferred_pass.vert  rg_fxaa.frag  rg_lighting_pass.frag  rg_offscreen_render.frag  rg_offscreen_render.vert  rg_rtao.comp  rtao.comp  rtao.frag  scene_default.frag  scene_default.vert  sdtest.vert  ssao.comp  swapchain.comp  terrain.frag  terrain.vert  tex.frag
Resources/Shaders/Hair/: hair.frag  hair.mesh  hair.task
Resources/Shaders/Reflection/: reflection.rchit  reflection.rmiss  rtcommon.glsl
Resources/Shaders/RenderGraph/: rg_compile_shaders.py  rg_deferred_pass.frag
Resources/Shaders/Unused/: ao.comp  composite.vert  rq_light.frag
Resources/Shaders/hlsl/: fxaa.frag.hlsl  fxaa.vert.hlsl
Resources/planet/model/: planet.FBX
Resources/planet/project_file/: liquid_planet3.max
Source/: Application.cpp  Application.hpp  Window.cpp  Window.hpp  main.cpp
Source/Core/: Application.cpp  Application.hpp  Math.hpp  Window.hpp
Source/Core/Resources/: Geometry.hpp  UniformBufferObject.hpp  Vertex.hpp
Source/Core/Scene/: IData.hpp  Mesh.cpp  Mesh.hpp  Scene.cpp  Scene.hpp
Source/Core/Struct/: ApplicationSettings.hpp
Source/Core/Vulkan/: DepthBuffer.cpp  DepthBuffer.hpp  Device.cpp  Device.hpp  ImageView.cpp  ImageView.hpp  Instance.cpp  Instance.hpp  Surface.cpp  Surface.hpp  Swapchain.cpp  Swapchain.hpp
Source/Resources/: Geometry.hpp  Vertex.hpp
Source/Scene/: IData.hpp  Mesh.cpp  Mesh.hpp  Scene.hpp
Source/Scenes/: Camera.hpp  Raytracing.cpp  Raytracing.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  Voxels.cpp  Voxels.hpp
Source/Scenes/Terrain/: TerrainScene.cpp  TerrainScene.hpp
Source/Struct/: ApplicationSettings.hpp  WindowSettings.hpp
Source/Utility/: Macro.hpp  Math.cpp  Math.hpp
Source/Vulkan/: DebugMessenger.hpp  DepthBuffer.cpp  DepthBuffer.hpp  Device.cpp  Device.hpp  Instance.hpp  Surface.hpp  Swapchain.cpp  Swapchain.hpp
Source/Vulkan/Command/: CommandBuffer.hpp  CommandBuffers.cpp  CommandPool.cpp  CommandPool.hpp
Source/Vulkan/Descriptor/: DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  DescriptorSets.hpp  DescriptorWrites.hpp
Source/Vulkan/GraphicsPipeline/: RenderPass.hpp  ShaderModule.cpp  ShaderModule.hpp
Source/Vulkan/Image/: Image.cpp  Image.hpp  ImageView.hpp
Source/Vulkan/Raytracing/: AccelerationStructure.cpp  AccelerationStructure.hpp  RtAccelerator.hpp
Source/Vulkan/Synchronization/: Fence.cpp  Fence.hpp  Semaphore.hpp
Source/rt/: AccelerationStructure.cpp  AccelerationStructure.hpp  RayTracingScene.cpp  RayTracingScene.hpp  RtAccelerator.cpp  RtAccelerator.hpp
Source/vk/: Buffer.hpp  ComputePipeline.hpp  Geometry.hpp  Image.cpp  Image.hpp  InstanceData.hpp  InstancedGeometry.hpp  Mesh.hpp  PipelineBuilder.cpp  PipelineBuilder.hpp  RayTracingScene.cpp  RayTracingScene.hpp  Sampler.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  UniformData.hpp  VertexData.hpp  readme.md
Source/vk/Commands/: CommandBuffers.cpp  CommandPool.cpp  CommandPool.hpp
Source/vk/Descriptors/: DescriptorSetLayout.cpp  DescriptorSets.hpp  DescriptorWrites.hpp
Source/vk/Device/: Instance.hpp
Source/vk/Pipelines/: Pipeline.hpp  PipelineState.hpp  (+3 more)
Stardust/: Benchmarking.hpp  Utility.hpp  main.cpp  pch.hpp  vertex_test.cpp
Stardust/Application/: Application.cpp  Application.hpp  ApplicationOptions.hpp  Configuration.hpp  GUI.hpp  UI.hpp
Stardust/Hair/: HairModel.hpp  Strand.hpp  TestLineGeometry.hpp  load_hair_test.cpp
Stardust/Nebula/: Barrier.cpp  Barrier.hpp  Descriptor.cpp  Descriptor.hpp  Framebuffer.cpp  Framebuffer.hpp  Image.cpp  Image.hpp  ImageBlit.hpp  ImageResolve.hpp  Utility.hpp  _docs.md
Stardust/RenderGraph/: Input.hpp  Node.hpp  Output.hpp  RenderGraph.hpp  Scene.hpp
Stardust/Rendering/: AmbientOcclusion.cpp  AmbientOcclusion.hpp  ClassicRenderer.hpp  RenderSettings.hpp
Stardust/Resources/: CameraUniformData.hpp  Geometry.hpp  VertexData.hpp
Stardust/Scene/: Camera.cpp  Camera.hpp  Light.hpp  Object.hpp  Scene.cpp  Scene.hpp  Scene2.hpp  Transform.hpp
Stardust/VirtualGraph/: GraphEditor.cpp  GraphEditor.hpp  Node.cpp  Node.hpp  ResourceDescription.hpp
Stardust/Vulkan/: Barrier.cpp  Barrier.hpp  Buffer.cpp  Buffer.hpp  CommandBuffers.cpp  CommandBuffers.hpp  Context.cpp  Context.hpp  ContextBuilder.cpp  ContextBuilder.hpp  ContextOptions.hpp  DeviceFeatures.hpp  Queues.hpp  RendererOptions.hpp  Utils.hpp
Stardust/Window/: Window.cpp  WindowOptions.hpp
Test/: main.cpp
Test/Application/: Application.cpp  Application.hpp
Test/Resources/: Geometry.hpp  VertexData.hpp
Test/Scene/: Object.hpp  Transform.hpp
Test/Vulkan/: Buffer.cpp  Buffer.hpp  CommandBuffers.cpp  CommandBuffers.hpp  Context.cpp  Context.hpp  DeviceFeatures.hpp
Test/Window/: Window.hpp
(+238 files in other folders)
